--- a/dri/backend/templates/FrontEnd/LoginPage.html
+++ b/dri/backend/templates/FrontEnd/LoginPage.html
@@ -5,14 +5,14 @@
  
 </head>	
 
-		<h1><center>Marquardt Switches <br> Data Tool</h1> 
+		<h1>Marquardt Switches <br> Data Tool</h1>
 		<img src="{{url_for('static',filename='img/mar.jpg')}}" alt="mar" width="512" height="512">
 			
 		
 		
 		<body>
   <main id="main-holder">
-    <input class ="button" type="button" onClick="location.href='/Main/'"
+    <input class ="button" type="button" onClick="location.href='/Main/ibfaghnqo'"
  value='Enter'>
   </main>
   
