--- a/art/backend/templates/FrontEnd/f2/totalthr2.html
+++ b/art/backend/templates/FrontEnd/f2/totalthr2.html
@@ -24,12 +24,7 @@
 		</div>
 
 	<div class="container">
-		<button type="button" class="btn" onclick="openPopup()">Raw Data</button>
-			<div class="popup" id="popup">
-					<h2> Raw Data</h2>
-					<img src="{{ url_for('static',filename='img/and.PNG')}}">
-		<button type="button"onclick="closePopup()">OK</button>
-	</div>
+		<button type="button" class="btn" onclick=window.location.href="/Main2/">Floor 2</button>
 	</div>
 	
 	<script>
