--- a/art/backend/templates/FrontEnd/f3/Mainpagef2.html
+++ b/art/backend/templates/FrontEnd/f3/Mainpagef2.html
@@ -10,8 +10,8 @@
 
 <div class="box0">
 <a href="/ppm3/"><p>PPM</p></a>
-<p>{{ppm}}%</p>
-	<p>{{w}}</p>
+<p>Average: {{ppm}}</p>
+	<p>Total: {{w}}</p>
 </div>
 
 <div class="box1">
@@ -22,14 +22,14 @@
 
 <div class="box2">
 <a href="/tt3/"><p>Total Throughput</p></a>
-<p>{{tt}}%</p>
-	<p>{{y}}</p>
+<p>Good: {{tt}}</p>
+	<p>Failed: {{y}}</p>
 </div>
 
 <div class="box3">
 <a href="/dt3/"><p>Downtime</p></a>
 <p>{{dt}}%</p>
-	<p>{{z}}</p>
+	<p>{{z}} min</p>
 </div>
 	<div class="header">
 		<div class="side-nav">
@@ -47,12 +47,7 @@
 		</div>
 	
 	<div class="container">
-		<button type="button" class="btn" onclick="openPopup()">Raw Data</button>
-			<div class="popup" id="popup">
-					<h2> Raw Data</h2>
-					<img src="{{ url_for('static',filename='img/and.PNG')}}">
-		<button type="button"onclick="closePopup()">OK</button>
-	</div>
+		<button type="button" class="btn" onclick=window.location.href="/Main3/">All FLoors</button>
 	</div>
 	
 	<script>
