--- a/art/backend/templates/FrontEnd/f3/downtime2.html
+++ b/art/backend/templates/FrontEnd/f3/downtime2.html
@@ -24,14 +24,9 @@
 		</div>
 	
 	<div class="container">
-		<button type="button" class="btn" onclick="openPopup()">Raw Data</button>
-			<div class="popup" id="popup">
-					<h2> Raw Data</h2>
-					<img src="{{ url_for('static',filename='img/and.PNG')}}">
-		<button type="button"onclick="closePopup()">OK</button>
+		<button type="button" class="btn" onclick=window.location.href="/Main3/">All FLoors</button>
 	</div>
-	</div>
-	
+
 	<script>
 	let popup = document.getElementById("popup");
 	
