--- a/art/backend/static/css/ppm.css
+++ b/art/backend/static/css/ppm.css
@@ -7,6 +7,8 @@
 		}
 	p{
 		color:009a9c;
+	font-size:20px;
+
 	}
 	h1{
 		color:009a9c ;
@@ -58,20 +60,26 @@
 	}
 	.nav-links li{
 		padding: 10px 0;
+		position:relative;
+						text-align:left;
+
 	}
 	.nav-links li a{
 		color: #fff;
 		text-decoration: none;
 		padding: 10px 14px;
+									text-align:left-side;
+
+
 	}
-	
+
 	/* Hover/Select indicator */
 	.active{
 		background: #fff;
 		width:100%;
 		height: 47px;
 		position: absolute;
-		left:0;
+		left:-5%;
 		top:2.6%;
 		z-index: -1;
 		border-radius: 6px;
@@ -197,6 +205,7 @@
 		color: #333;
 		visibility: hidden;
 		transition: transform 0.4s, top 0.4s;
+		z-index:10000;
 	}
 	.open-popup2{
 		visibility: visible;
