--- a/art/backend/templates/FrontEnd/f1/Mainpage.html
+++ b/art/backend/templates/FrontEnd/f1/Mainpage.html
@@ -8,29 +8,39 @@
 
 <body>
 
-<div class="box0">
-<a href="/ppm/"><p><font size="-1">PPM</font></p></a>
-<p>Average: {{ppm}}</p>
-	<p>Total: {{w}}</p>
-</div>
 
-<div class="box1">
-<a href="/pro/"><p><font size="-1">Productivity</font></p></a>
-<p>{{pro}}%</p>
-	<p>{{x}}</p>
-</div>
 
-<div class="box2">
-	<a href="/tt/"><p><font size="-1">Total Throughput</font></p></a>
-<p>Good: {{tt}}</p>
-	<p>Failed: {{y}}</p>
-</div>
 
-<div class="box3">
-	<a href="/dt/"><p><font size="-1">Downtime</font></p></a>
-<p>{{dt}}%</p>
-	<p>{{z}}</p>
-</div>
+<button type="button" class="btn3" onclick=window.location.href="/ppm/"><p>PPM</p>
+	<br>
+<h1>{{ppm}} Avg</h1>
+	<h1>{{w}} Total</h1>
+</button>
+
+
+
+
+<button type="button" class="btn4" onclick=window.location.href="/pro/"><p>Productivity</p>
+		<br>
+<h1 style="color:{{pcolor}};">{{pro}}%</h1>
+	</button>
+
+
+<button type="button" class="btn5" onclick=window.location.href="/tt/"><p>Total Throughput</p>
+		<br>
+<h1 style="color:{{ttgcolor}};">{{tt}} Good</h1>
+	<h1 style="color:{{ttfcolor}};">{{y}} Failed</h1>
+	</button>
+
+
+<button type="button" class="btn6" onclick=window.location.href="/dt/"><p>Downtime</p>
+		<br>
+<h1 style="color:{{dtcolor}}">{{dt}}%</h1>
+	<h1>{{z}} min</h1>
+	</button>
+
+
+
 	<div class="header">
 		<div class="side-nav">
 			<a href='/' class="logo">
@@ -82,17 +92,7 @@
 		popup2.classList.remove("open-popup2");
 	}
 </script>
-<div>
-	<ul class="nav-links">
-				<li><a href="Mainpage.html"><p>Dashboard</p></a></li>
-				<li><a href="/ppm/"><p>PPM</p></a></li>
-				<li><a href="/pro/"><p>Productivity</p></a></li>
-				<li><a href="/tt/"><p>Total Throughput</p></a></li>
-				<li><a href="/dt/"><p>Downtime</p></a></li>
-				<div class="active"></div>
-				</ul>
 
-</div>
 
 </body>
 </html>	
