--- a/art/backend/templates/FrontEnd/f3/Mainpagef2.html
+++ b/art/backend/templates/FrontEnd/f3/Mainpagef2.html
@@ -8,29 +8,33 @@
 
 <body>
 
-<div class="box0">
-<a href="/ppm3/"><p>PPM</p></a>
-<p>Average: {{ppm}}</p>
-	<p>Total: {{w}}</p>
-</div>
+<button type="button" class="btn3" onclick=window.location.href="/ppm3/"><p>PPM</p>
+	<br>
+<h1>{{ppm}} Avg</h1>
+	<h1>{{w}} Total</h1>
+</button>
 
-<div class="box1">
-<a href="/pro3/"><p>Productivity</p></a>
-<p>{{pro}}%</p>
-	<p>{{x}}</p>
-</div>
 
-<div class="box2">
-<a href="/tt3/"><p>Total Throughput</p></a>
-<p>Good: {{tt}}</p>
-	<p>Failed: {{y}}</p>
-</div>
 
-<div class="box3">
-<a href="/dt3/"><p>Downtime</p></a>
-<p>{{dt}}%</p>
-	<p>{{z}} min</p>
-</div>
+
+<button type="button" class="btn4" onclick=window.location.href="/pro3/"><p>Productivity</p>
+		<br>
+<h1 style="color:{{pcolor}};">{{pro}}%</h1>
+	</button>
+
+
+<button type="button" class="btn5" onclick=window.location.href="/tt3/"><p>Total Throughput</p>
+		<br>
+<h1 style="color:{{ttgcolor}};">{{tt}} Good</h1>
+	<h1 style="color:{{ttfcolor}};">{{y}} Failed</h1>
+	</button>
+
+
+<button type="button" class="btn6" onclick=window.location.href="/dt3/"><p>Downtime</p>
+		<br>
+<h1 style="color:{{dtcolor}}">{{dt}}%</h1>
+	<h1>{{z}} min</h1>
+	</button>
 	<div class="header">
 		<div class="side-nav">
 			<a href='/' class="logo">
@@ -47,7 +51,7 @@
 		</div>
 	
 	<div class="container">
-		<button type="button" class="btn" onclick=window.location.href="/Main3/">All FLoors</button>
+		<button type="button" class="btn" onclick=window.location.href="/Main3/">All Floors</button>
 	</div>
 	
 	<script>
@@ -69,7 +73,6 @@
 		<button type="button" onclick="window.location.href='/Main2/';">Floor 2</button>
 		<button type="button" onclick="window.location.href='/Main3/';">All Floors</button>
 		<button type="button" onclick="closePopup2()">OK</button>
-	</div>
 	</div>
 	
 	<script>
