--- a/art/backend/templates/FrontEnd/f3/totalthr2.html
+++ b/art/backend/templates/FrontEnd/f3/totalthr2.html
@@ -23,8 +23,8 @@
 				</ul>
 		</div>
 
-	<<div class="container">
-		<button type="button" class="btn" onclick=window.location.href="/Main3/">All FLoors</button>
+	<div class="container">
+		<button type="button" class="btn" onclick=window.location.href="/Main3/">All Floors</button>
 	</div>
 	
 	<script>
@@ -42,8 +42,10 @@
 		<button type="button" class="btn2" onclick="openPopup2()">Different Areas</button>
 			<div class="popup2" id="popup2">
 					<h2> Select Area</h2>
-		<button type="button"onclick="closePopup2()">OK</button>
-	</div>
+		<button type="button" onclick="window.location.href='/Main/';">Floor 1</button>
+		<button type="button" onclick="window.location.href='/Main2/';">Floor 2</button>
+		<button type="button" onclick="window.location.href='/Main3/';">All Floors</button>
+		<button type="button" onclick="closePopup2()">OK</button>
 	</div>
 	
 	<script>
