--- a/pmdci/frontend/src/components/graph.css
+++ b/pmdci/frontend/src/components/graph.css
@@ -160,3 +160,8 @@
     justify-content: space-evenly;
     align-items: center;
 }
+
+.popup {
+    width: fit-content;
+    height: fit-content;
+}
